--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
 <body>
 
     <div class="navigation fixed z-50 w-full">
-        <nav class="px-10 py-4 relative bg-white mx-auto">
+        <nav class="px-10 py-4 relative bg-white mx-auto tracking-[0.7px]">
             <div class="parent_div flex flex-row justify-between items-center">
                 <a class="logo" href="index.html"><img class="w-[120px]" src="img/saytaz.svg" alt="logo"></a>
-                <div class="links bg-white absolute z-40 lg:static top-0 right-0 p-10 lg:p-0 h-screen w-2/3 hidden lg:flex lg:max-w-[1000px]">
+                <div
+                    class="links bg-white absolute hidden overflow-y-scroll md:overflow-y-visible z-40 
+                    lg:static top-0 right-0 p-7 lg:p-0 h-fit lg:flex w-[300px]">
                     <i class="fa-solid fa-xmark text-2xl cursor-pointer p-1 absolute top-[18px] right-10"
                         onclick="closeBar()"></i>
                     <ul class="navlinks flex flex-col lg:flex-row my-5 lg:m-0 lg:items-center lg:gap-3">
@@ -47,7 +49,9 @@
                         </li>
                     </ul>
                 </div>
-                <div class="right_links absolute hidden z-30 lg:static lg:flex lg:items-center top-[280px] right-0 p-10 lg:p-0 w-2/3 md:w-fit">
+                <div
+                    class="right_links bg-white absolute hidden overflow-y-scroll md:overflow-visible z-30 
+                    lg:static lg:flex lg:items-center top-[300px] right-0 p-10 lg:p-0 md:w-fit w-[300px]">
                     <div class="flex items-center gap-5">
                         <select id="valuta"
                             class="cursor-pointer w-[40px] my-3 lg:m-0 font-bold text-xl text-[#300B60]">
@@ -60,10 +64,10 @@
                                 <i class="fa-solid fa-chevron-down text-xs px-1"></i>
                             </div>
                             <div class="options absolute top-full">
-                                <div class="option cursor-pointer px-3 py-2 rounded-md" data-value="az">
+                                <div class="option cursor-pointer px-3 py-2 border-b-[1px] border-[#c4c2c2]" data-value="az">
                                     <img src="img/Flag_of_Azerbaijan.png" alt="Azerbaijan Flag">
                                 </div>
-                                <div class="option cursor-pointer px-3 py-2 rounded-md" data-value="en">
+                                <div class="option cursor-pointer px-3 py-2 border-b-[1px] border-[#c4c2c2]" data-value="en">
                                     <img src="img/Flag_of_the_United_States.png" alt="USA Flag">
                                 </div>
                             </div>
@@ -73,7 +77,7 @@
                         <button
                             class="teklif_btn text-white font-bold w-full md:w-[200px] rounded-md px-5 py-2 border-none">
                             Qiymət Təklifi Al</button>
-                        <button class="login_btn text-[#732CE3] font-bold w-full md:w-[130px] rounded-md px-5 py-2">
+                        <button class="login_btn text-[#732CE3] font-bold w-full md:w-[130px] rounded-md px-5 py-2 border border-[#732CE3]">
                             Daxil olun</button>
                     </div>
                 </div>
@@ -84,9 +88,10 @@
 
     <header>
         <div class="container">
-            <div class="header_content h-fit pb-10 pt-[100px] flex flex-col items-center justify-center gap-8">
+            <div id="header_content"
+                class="header_content h-fit pb-10 pt-[100px] flex flex-col items-center justify-center gap-8">
                 <h1
-                    class="text-center tracking-wide lg:px-10 lg:w-[800px] text-2xl md:text-3xl lg:text-5xl font-medium">
+                    class="text-center leading-[60px] text-[#334155] tracking-wide lg:px-10 lg:w-[800px] text-2xl md:text-3xl lg:text-5xl font-medium">
                     Biznesinizi bizimlə rəqəmsal dünyada
                     <span class="sm:mx-4 md:mx-6 text-blue-600 relative lg:mx-[30px] text-5">daha asan
                         <div
@@ -198,10 +203,12 @@
                         <h4
                             class="sm:text-[22px] md:text-[32px] tracking-[0.1px] text-center font-medium text-[#300B60]">
                             Domen Adını Axtarın</h4>
-                        <p class="text-base font-normal tracking-[0.1px] text-[20px] max-w-[636px] text-[#300B60] text-center">
+                        <p
+                            class="text-base font-normal tracking-[0.1px] text-[20px] max-w-[636px] text-[#300B60] text-center">
                             .az domain sifariş etməmişdən öncə <span class="font-bold">whois.az</span> saytında yoxlayın
                         </p>
-                        <p class="text-base font-normal tracking-[0.1px] text-[20px] max-w-[636px] text-[#300B60] text-center">
+                        <p
+                            class="text-base font-normal tracking-[0.1px] text-[20px] max-w-[636px] text-[#300B60] text-center">
                             Sayt.az-da .az domenləri yalnız aktiv hosting planı olan müştərilər üçün əlçatandır.
                             Davam etməzdən əvvəl bizdən hosting aldığınıza əmin olun.
                             <a class="font-bold" href="#">Ətraflı oxu...</a>
@@ -212,7 +219,7 @@
                                 <input type="text"
                                     class="w-full pr-3 text-black outline-none placeholder:text-slate-400"
                                     placeholder="İstədiyiniz domen adını daxil edin">
-                                <select id="domenName" class="text-slate-500 outline-none"></select>
+                                <select id="domenName" class="text-slate-500 outline-none border-none border-l border-[#e2e2e2]"></select>
                             </div>
                             <button
                                 class="domen_btn bg-[#A271F2] hover:bg-[#51258b] active:bg-[#300B60] px-6 text-white rounded-[4px]">Axtar</button>
@@ -244,7 +251,7 @@
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 lg:mx-0 gap-2">
                     <div
-                        class="plan_card economic_plan border-[1px] rounded-lg p-2 md:p-4 lg:p-6 cursor-pointer transition bg-[#FAFBFF]">
+                        class="plan_card box-border economic_plan border-[1px] rounded-lg p-2 md:p-4 lg:p-6 cursor-pointer transition bg-[#FAFBFF]">
                         <div class="mb-5">
                             <span class="plan_price text-2xl md:text-4xl font-bold text-[#300B60]">$5</span>
                             <span class="plan_period text-sm font-semibold text-[#300B60] ml-1">/ay</span>
@@ -275,7 +282,7 @@
                             et</button>
                     </div>
                     <div
-                        class="plan_card standart_plan selectedPlan border-[1px] rounded-lg p-2 md:p-4 lg:p-6 cursor-pointer transition bg-[#FAFBFF]">
+                        class="plan_card box-border standart_plan selectedPlan border-[1px] rounded-lg p-2 md:p-4 lg:p-6 cursor-pointer transition bg-[#FAFBFF]">
                         <div class="mb-5">
                             <span class="plan_price text-2xl md:text-4xl font-bold text-[#300B60]">$5</span>
                             <span class="plan_period text-sm font-semibold text-[#300B60] ml-1">/ay</span>
@@ -306,7 +313,7 @@
                             et</button>
                     </div>
                     <div
-                        class="plan_card professional_plan border-[1px] rounded-lg p-2 md:p-4 lg:p-6 cursor-pointer transition bg-[#FAFBFF]">
+                        class="plan_card box-border professional_plan border-[1px] rounded-lg p-2 md:p-4 lg:p-6 cursor-pointer transition bg-[#FAFBFF]">
                         <div class="mb-5">
                             <span class="plan_price text-2xl md:text-4xl font-bold text-[#300B60]">$5</span>
                             <span class="plan_period text-sm font-semibold text-[#300B60] ml-1">/ay</span>
@@ -429,7 +436,8 @@
                 <h2 class="text-lg mb-3 md:text-[22px] lg:text-[32px] text-[#300B60] text-center font-bold">Komandamızın
                     Pərdə Arxası</h2>
                 <p class="text-base md:text-xl text-[#4A2182] text-center font-semibold">Komandamızla Tanış Olaq</p>
-                <div class="mt-10 flex flex-col md:flex-row flex-wrap justify-center gap-5">
+                <div
+                    class="mt-10 w-fit mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 place-items-center gap-5">
                     <div
                         class="relative box-border w-[250px] justify-center items-center border-2 border-[#A271F2] rounded-[30px] p-4">
                         <img src="img/k-1.jpg" alt="team" class="w-full mx-auto h-[300px] rounded-[14px] object-cover">
@@ -720,20 +728,88 @@
                 <h2 class="text-lg md:text-[22px] lg:text-[32px] text-[#300B60] text-center font-bold">
                     Videolarımızı Kəşf Edin</h2>
                 <p class="text-base text-[#47207E] text-center font-semibold mt-3">Kəşf Edin, Öyrənin və UğurQazanın</p>
-                <p class="max-w-[700px] mx-auto text-base text-[#47207E] text-center font-semibold mt-3">Son nailiyyətlərimizi,
+                <p class="max-w-[700px] mx-auto text-base text-[#47207E] text-center font-semibold mt-3">Son
+                    nailiyyətlərimizi,
                     media çıxışlarımızı və ətraflı təlimlərimizi izləmək üçün video kolleksiyamıza göz atın. İdeal veb
                     saytınızı qurmaqda sizə necə kömək edə biləcəyimizi öyrənin və uğur hekayəmizdən ilham alın.</p>
                 <div class="mt-10 flex flex-wrap gap-5 justify-center">
-                    <iframe width="600" height="424" src="https://www.youtube.com/embed/KlbBMSbPO8g" title="WEB Dizayn Studiyanın Biznes Saytları üçün Qiymət Planları - WEB.Com.Az" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                    <iframe width="600" height="424" src="https://www.youtube.com/embed/dJPCo2ulWiA" title="Domen. Domenlər haqqında məlumat" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="600" height="424" src="https://www.youtube.com/embed/KlbBMSbPO8g"
+                        title="WEB Dizayn Studiyanın Biznes Saytları üçün Qiymət Planları - WEB.Com.Az" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="600" height="424" src="https://www.youtube.com/embed/dJPCo2ulWiA"
+                        title="Domen. Domenlər haqqında məlumat" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
             </section>
         </div>
 
     </main>
 
-    <footer>
+    <footer class="py-16 border-t bg-[#FAF4FF]">
         <div class="container">
+            <div class="footer_content pb-10 flex flex-col gap-6 md:flex-row">
+                <div class="w-full md:w-[60%]">
+                    <a href="index.html">
+                        <img src="img/saytaz.svg" alt="" class="" width="200">
+                    </a>
+                    <p class="text-base md:text-sm text-[#47207E] max-w-[456px] my-10">Sayt.az - Web saytların
+                        hazırlanması, Domain, Hosting satışı, SEO, SMM və texniki xidmətlər təklif edir.</p>
+                    <div class="mt-4">
+                        <p class="font-bold my-4 text-[#47207E]">Bizi izləyin :</p>
+                        <div class="flex items-center gap-6">
+                            <i
+                                class="fa-brands fa-facebook text-[24px] md:text-[44px] cursor-pointer text-[#A271F2] hover:text-[#844fda]"></i>
+                            <i
+                                class="fa-brands fa-instagram text-2xl md:text-5xl cursor-pointer text-[#A271F2] hover:text-[#844fda]"></i>
+                            <i
+                                class="fa-brands fa-whatsapp text-2xl md:text-5xl cursor-pointer text-[#A271F2] hover:text-[#844fda]"></i>
+                            <i
+                                class="fa-brands fa-linkedin-in text-2xl md:text-5xl cursor-pointer text-[#A271F2] hover:text-[#844fda]"></i>
+                            <i
+                                class="fa-brands fa-youtube text-2xl md:text-5xl cursor-pointer text-[#A271F2] hover:text-[#844fda]"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-full md:w-[500px] flex flex-col md:flex-row gap-10 ">
+                    <div class="flex flex-col gap-3">
+                        <h4 class="mb-0 md:mb-8 text-[#300B60] font-bold text-lg md:text-2xl uppercase">Hostinq & Domen
+                        </h4>
+                        <a class="w-fit text-lg font-medium text-[#4A2182] hover:text-[#A271F2]"
+                            href="#domenSearch">Domen</a>
+                        <a class="w-fit text-lg font-medium text-[#4A2182] hover:text-[#A271F2]"
+                            href="#hostingPlan">Veb Hosting</a>
+                        <a class="w-fit text-lg font-medium text-[#4A2182] hover:text-[#A271F2]" href="">VPS
+                            Hosting</a>
+                        <a class="w-fit text-lg font-medium text-[#4A2182] hover:text-[#A271F2]"
+                            href="">Server</a>
+                    </div>
+                    <div class="flex flex-col gap-3">
+                        <h4 class="mb-0 md:mb-8 text-[#300B60] font-bold text-lg md:text-2xl uppercase">Şirkət</h4>
+                        <a class="w-fit text-lg font-medium text-[#4A2182] hover:text-[#A271F2]"
+                            href="header_content">Haqqımızda</a>
+                        <a class="w-fit text-lg font-medium text-[#4A2182] hover:text-[#A271F2]"
+                            href="">Əlaqə</a>
+                        <a class="w-fit text-lg font-medium text-[#4A2182] hover:text-[#A271F2]"
+                            href="#blogs">Bloq</a>
+                        <a class="w-fit text-lg font-medium text-[#4A2182] hover:text-[#A271F2]"
+                            href="#sonIsler">Portfolio</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="container">
+            <div class="pt-10 flex flex-col md:flex-row justify-between items-center">
+                <p class="text-[#47207E]">© Copyright 2004-2025 © Sayt.az . Bütün Hüquqlar Qorunur.</p>
+                <p class="flex items-center gap-2 text-[#47207E]">
+                    <span class="gap-2 flex md:text-base items-center">
+                        <i class="fa-solid fa-phone"></i> +(99477) 399-78-11</span>
+                    <span class="gap-2 flex md:text-base items-center">
+                        <i class="fa-solid fa-envelope"></i> support@sayt.az</span>
+                </p>
+            </div>
         </div>
     </footer>
 
