--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                             Daxil olun</button>
                     </div>
                 </div>
-                <div><i class="fa-solid fa-bars cursor-pointer text-xl p-1" onclick="openBar()"></i></div>
+                <i class="fa-solid fa-bars cursor-pointer text-xl p-1" onclick="openBar()"></i>
             </div>
         </nav>
     </div>
@@ -217,7 +217,7 @@
                             <div
                                 class="inp_box bg-white max-w-[800px] flex justify-center items-center border border-gray-300 border-r-0 rounded-md py-2 px-3">
                                 <input type="text"
-                                    class="w-full md:w-[400px] pr-3 text-black outline-none 
+                                    class="domen_input w-full md:w-[400px] pr-3 text-black outline-none 
                                     placeholder:text-slate-400 placeholder:text-xs md:placeholder:text-base"
                                     placeholder="İstədiyiniz domen adını daxil edin" oninput="checkDomain(this.value)">
                                 <select id="domenName" class="bg-white text-slate-500 outline-none border-l border-[#e2e2e2]"></select>
