--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a class="logo" href="index.html"><img class="w-[120px]" src="img/saytaz.svg" alt="logo"></a>
                 <div
                     class="links bg-white absolute hidden overflow-y-scroll md:overflow-y-visible z-40 
-                            lg:static top-0 right-0 p-7 lg:p-0 h-fit lg:flex w-[300px]">
+                            lg:static top-0 right-0 left-0 p-7 lg:p-0 lg:h-fit h-[60vh] lg:flex w-full">
                     <i class="fa-solid fa-xmark text-2xl cursor-pointer p-1 absolute top-[18px] right-6"
                         onclick="closeBar()"></i>
                     <ul class="navlinks flex flex-col lg:flex-row my-5 lg:m-0 lg:items-center lg:gap-3">
@@ -51,7 +51,7 @@
                 </div>
                 <div
                     class="right_links bg-white absolute hidden overflow-y-scroll md:overflow-visible z-30 
-                    lg:static lg:flex lg:items-center top-[300px] right-0 p-10 lg:p-0 md:w-fit w-[300px]">
+                    lg:static lg:flex lg:items-center top-[460px] h-[40vh] lg:h-fit right-0 left-0 p-10 lg:p-0 lg:w-fit w-full">
                     <div class="flex items-center gap-5">
                         <select id="valuta"
                             class="bg-white cursor-pointer w-[40px] my-3 lg:m-0 font-bold text-xl text-[#300B60]">
