--- a/index.html
+++ b/index.html
@@ -29,23 +29,23 @@
                         <li class="cursor-pointer py-3 text-[#300B60] font-manrope font-bold relative" onclick="">Veb
                             site
                             <i class="fa-solid fa-chevron-down text-sm"></i>
-                            <ul class="vebsayt_list bg-white rounded-lg hidden absolute -left-20 py-5"></ul>
+                            <ul class="vebsayt_list w-full bg-white rounded-lg hidden absolute -left-20 py-5"></ul>
                         </li>
                         <li class="cursor-pointer py-3 text-[#300B60] font-manrope font-bold relative">Domen
                             <i class="fa-solid fa-chevron-down text-sm"></i>
-                            <ul class="domen_list bg-white rounded-lg hidden absolute -left-20 py-5"></ul>
+                            <ul class="domen_list w-full bg-white rounded-lg hidden absolute -left-20 py-5"></ul>
                         </li>
                         <li class="cursor-pointer py-3 text-[#300B60] font-manrope font-bold relative">Hostinq
                             <i class="fa-solid fa-chevron-down text-sm"></i>
-                            <ul class="hosting_list bg-white rounded-lg hidden absolute -left-20 py-5"></ul>
+                            <ul class="hosting_list w-full bg-white rounded-lg hidden absolute -left-20 py-5"></ul>
                         </li>
                         <li class="cursor-pointer py-3 text-[#300B60] font-manrope font-bold relative">Xidmətlər
                             <i class="fa-solid fa-chevron-down text-sm"></i>
-                            <ul class="xidmet_list bg-white rounded-lg hidden absolute -left-20 py-5"></ul>
+                            <ul class="xidmet_list w-full bg-white rounded-lg hidden absolute -left-20 py-5"></ul>
                         </li>
                         <li class="cursor-pointer py-3 text-[#300B60] font-manrope font-bold relative">Şirkət
                             <i class="fa-solid fa-chevron-down text-sm"></i>
-                            <ul class="sirket_list bg-white rounded-lg hidden absolute -left-20 py-5"></ul>
+                            <ul class="sirket_list w-full bg-white rounded-lg hidden absolute -left-20 py-5"></ul>
                         </li>
                     </ul>
                 </div>
