23-th commit Navbar-in linklerinde bag vardi, hell olundu

--- a/index.html
+++ b/index.html
@@ -17,35 +17,35 @@
 <body>
 
     <div class="navigation fixed z-50 w-full">
-        <nav class="px-10 py-4 relative bg-white mx-auto tracking-[0.7px]">
+        <nav class="px-6 md-10 py-4 relative bg-white mx-auto tracking-[0.7px]">
             <div class="parent_div flex flex-row justify-between items-center">
                 <a class="logo" href="index.html"><img class="w-[120px]" src="img/saytaz.svg" alt="logo"></a>
                 <div
                     class="links bg-white absolute hidden overflow-y-scroll md:overflow-y-visible z-40 
-                            lg:static top-0 right-0 left-0 p-7 lg:p-0 lg:h-fit h-[60vh] lg:flex w-full">
+                            lg:static top-0 right-0 left-0 p-7 lg:p-0 lg:h-fit h-screen lg:flex w-full">
                     <i class="fa-solid fa-xmark text-2xl cursor-pointer p-1 absolute top-[18px] right-6"
                         onclick="closeBar()"></i>
                     <ul class="navlinks flex flex-col lg:flex-row my-5 lg:m-0 lg:items-center lg:gap-3">
                         <li class="cursor-pointer py-3 text-[#300B60] font-manrope font-bold relative" onclick="">Veb
                             site
                             <i class="fa-solid fa-chevron-down text-sm"></i>
-                            <ul class="vebsayt_list w-full bg-white rounded-lg hidden absolute -left-20 py-5"></ul>
+                            <ul class="vebsayt_list w-full md:w-fit border-box bg-white rounded-lg hidden absolute -left-20 py-5"></ul>
                         </li>
                         <li class="cursor-pointer py-3 text-[#300B60] font-manrope font-bold relative">Domen
                             <i class="fa-solid fa-chevron-down text-sm"></i>
-                            <ul class="domen_list w-full bg-white rounded-lg hidden absolute -left-20 py-5"></ul>
+                            <ul class="domen_list w-full md:w-fit border-box bg-white rounded-lg hidden absolute -left-20 py-5"></ul>
                         </li>
                         <li class="cursor-pointer py-3 text-[#300B60] font-manrope font-bold relative">Hostinq
                             <i class="fa-solid fa-chevron-down text-sm"></i>
-                            <ul class="hosting_list w-full bg-white rounded-lg hidden absolute -left-20 py-5"></ul>
+                            <ul class="hosting_list w-full md:w-fit border-box bg-white rounded-lg hidden absolute -left-20 py-5"></ul>
                         </li>
                         <li class="cursor-pointer py-3 text-[#300B60] font-manrope font-bold relative">Xidmətlər
                             <i class="fa-solid fa-chevron-down text-sm"></i>
-                            <ul class="xidmet_list w-full bg-white rounded-lg hidden absolute -left-20 py-5"></ul>
+                            <ul class="xidmet_list w-full md:w-fit border-box bg-white rounded-lg hidden absolute -left-20 py-5"></ul>
                         </li>
                         <li class="cursor-pointer py-3 text-[#300B60] font-manrope font-bold relative">Şirkət
                             <i class="fa-solid fa-chevron-down text-sm"></i>
-                            <ul class="sirket_list w-full bg-white rounded-lg hidden absolute -left-20 py-5"></ul>
+                            <ul class="sirket_list w-full md:w-fit border-box bg-white rounded-lg hidden absolute -left-20 py-5"></ul>
                         </li>
                     </ul>
                 </div>
